# aeroCNV

./: example_notebook.ipynb  pyproject.toml
aeroCNV/: __init__.py  aggregator.py  cnvHMM.py  dynamicHMM.py  iterative.py  logging_config.py  model_wrapper.py  optimize_likelihood.py  preprocess.py  simulate_data.py  states.py  utils.py
aeroCNV/resources/: CNV_A_Profiles.csv  CNV_B_Profiles.csv  cyclegenes.csv  genePos.txt  gene_annotations.csv
