[tool.poetry]
name = "aeroCNV"
version = "0.1.0"
description = "aeroCNV: Algorithmic Expression-based Reconstruction of Copy Number Variations using Hidden Markov Models"
authors = ["sitarapersad <sitara.persad@columbia.edu>"]
readme = "README.md"
packages = [
    { include = "aeroCNV", from = "." },
    ]

[tool.poetry.dependencies]
python = "^3.10"
seacells = "^0.3.3"
picasso = {git = "https://github.com/sitarapersad/picasso"}
icecream = "^2.1.3"
infercnvpy = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
